# aap3uc_DS5111su24_lab_01

./: LICENSE  README.md  get_texts.sh  makefile  pylintrc  pyproject.toml  raven_counts.sh  raven_line_count.sh  raven_word_count.sh  requirements.txt  tokenizer.py  total_lines.sh  total_words.sh
.github/workflows/: package_validations.yml  pylint_validations.yml  test_validations.yml  validate_package.yml  validations.yml
db/: Course Assignment.csv  Courses.csv  DatabaseDesign.drawio  Instructors.csv  Learning Outcomes.csv  Part1.txt  Part2.txt  Terms.csv  db_design.sql
env/: pyvenv.cfg
src/pkg_aap3uc/: functions.py  setup.py  subtract.py  tokenize.py
src/pkg_aap3uc.egg-info/: PKG-INFO
test/: test_clean_text.py  test_count_words.py  test_files.py  test_newfiles.py  test_tokenizer.py  tokenizer.py
tests/: test_add_one.py
